# cipher_trapdoor_sets

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  approxsetnotation.sty  defs.tex  gloss.tex  main.tex  probabilitynotation.sty  references.bib  setnotation.sty  todo.txt
benchmarks/: CMakeLists.txt  bench_operations.cpp  bench_sets.cpp  bench_trapdoor.cpp
cmake/: cipher_trapdoor_sets-config.cmake.in
examples/: CMakeLists.txt  basic_trapdoor.cpp  cardinality_estimation.cpp  homomorphic_operations.cpp  serialization.cpp  set_operations.cpp  similarity_search.cpp
img/: fig_shs.tex
include/cipher_trapdoor_sets/: cts.hpp  key_management.hpp  random_trapdoor.hpp  trapdoor.hpp  trapdoor_boolean_algebra.hpp  trapdoor_seq.hpp  trapdoor_symmetric_difference_group.hpp  trapdoor_tag.hpp
include/cipher_trapdoor_sets/core/: approximate_value.hpp  hash_types.hpp
include/cipher_trapdoor_sets/operations/: analytics.hpp  batch_ops.hpp  cardinality.hpp  homomorphic.hpp  similarity.hpp
include/cipher_trapdoor_sets/serialization/: binary_format.hpp
include/cipher_trapdoor_sets/sets/: boolean_set.hpp  symmetric_difference_set.hpp
oblivious_set/: .gitignore  defs.tex  main.tex  todo.txt
oblivious_set/research/: exact_ob_set.nb  fig_shs.tex  untitled.md
oblivious_set/sections/: bool_alg.tex  intro.tex
paper/: main.tex  main_comprehensive.tex  nomen.tex  references.bib
paper/sections/: alg.md  algorithms.tex  bf_second_order.tex  bool_rng.tex  neg_pos_ob_set.tex  ob_set_2.tex  performance_eval.tex  security_analysis.tex  shs.tex
research/: Untitled.ipynb
sections/: appendix.tex  bool_alg.tex  entropy.tex  estimators.tex  intro.tex  ob_set.tex  prob_model.tex  shs-first-order.tex  shs.tex
tests/: CMakeLists.txt  test_approximate_value.cpp  test_core.cpp  test_hash_types.cpp  test_homomorphic.cpp  test_operations.cpp  test_serialization_keys.cpp  test_sets.cpp  test_trapdoor.cpp
trapdoor_bool_algebra/: Untitled-1.ipynb  index.md  ring.md
tutorials/: 01_introduction_to_trapdoors.md  02_basic_operations.md  03_boolean_sets.md  README.md
tutorials/examples/: tutorial1_hello_trapdoor.cpp  tutorial2_batch_operations.cpp  tutorial3_private_set_operations.cpp
tutorials/reference/: quick_reference.md
